tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_attaching_mut_ref_to_immutable_object/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Cannot mutate immutable variable `foo`
   ┌─ src/main.nr:14:20
   │
14 │         let f = || foo.mutate();
   │                    ---
   │

Aborting due to 1 previous error
