tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_attaching_mut_ref_to_immutable_object/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot mutate immutable variable `foo`
   ┌─ src/main.nr:14:20
   │
14 │         let f = || foo.mutate();
   │                    ---
   │

Aborting due to 1 previous error
